Closed Bug 1801616 Opened 2 years ago Closed 2 years ago

Crash in [@ RefPtr<T>::get | RefPtr<T>::operator-> | JS::loader::ScriptLoadRequest::GetWorkerLoadContext]

Categories

(Core :: DOM: Workers, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- fixed

People

(Reporter: aryx, Assigned: yulia)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

20 crashes from 10 installations, oldest affected build is Firefox 109.0a1 20221118154632.

Crash report: https://crash-stats.mozilla.org/report/index/36930dc3-bd52-4dbf-b9a0-033fc0221121

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  RefPtr<JS::loader::LoadContextBase>::get const  mfbt/RefPtr.h:286
0  xul.dll  RefPtr<JS::loader::LoadContextBase>::operator-> const  mfbt/RefPtr.h:316
0  xul.dll  JS::loader::ScriptLoadRequest::GetWorkerLoadContext  js/loader/ScriptLoadRequest.cpp:152
0  xul.dll  mozilla::dom::ThreadSafeRequestHandle::GetContext  dom/workers/loader/WorkerLoadContext.h:170
0  xul.dll  mozilla::dom::workerinternals::loader::NetworkLoadHandler::DataReceivedFromNetwork  dom/workers/loader/NetworkLoadHandler.cpp:68
1  xul.dll  mozilla::dom::workerinternals::loader::NetworkLoadHandler::OnStreamComplete  dom/workers/loader/NetworkLoadHandler.cpp:58
2  xul.dll  mozilla::net::nsStreamLoader::OnStopRequest  netwerk/base/nsStreamLoader.cpp:85
3  xul.dll  mozilla::net::nsStreamListenerTee::OnStopRequest  netwerk/base/nsStreamListenerTee.cpp:51
4  xul.dll  mozilla::net::nsHTTPCompressConv::OnStopRequest  netwerk/streamconv/converters/nsHTTPCompressConv.cpp:180
5  xul.dll  std::_Func_impl_no_alloc<`lambda at /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:799:13', void>::_Do_call  netwerk/protocol/http/HttpChannelChild.cpp:1052
Flags: needinfo?(ystartsev)
See Also: → 1801619
Duplicate of this bug: 1801619
See Also: 1801619
Assignee: nobody → ystartsev
Status: NEW → ASSIGNED
Pushed by ystartsev@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1f7eacb7b39f Cancellation should abort network and cache loads if it has already completed; r=asuth
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Flags: needinfo?(ystartsev)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: