Bug 1801616 - Cancellation should abort network and cache loads if it has already completed;  r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D162557